--- a/PhotoBooth.WEB/wwwroot/styles.css
+++ b/PhotoBooth.WEB/wwwroot/styles.css
@@ -1,13 +1,9 @@
-﻿.has-error {
-    background-color: red;
-}
-
+﻿
 body {
     background-image: url('img/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-attachment:fixed;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -37,5 +33,16 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 25px;
     color: white;
-    padding: 25px 10px;
+    padding: 25px 0px;
+    margin: 10px;
+}
+
+.form-divider {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.form-checkbox-label {
+    font-size: 25px;
+    margin-top: -10px;
 }
