--- a/PhotoBooth.WEB/wwwroot/styles.css
+++ b/PhotoBooth.WEB/wwwroot/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 .form-box {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 25px;
     color: white;
     padding: 25px 10px;
@@ -49,4 +49,18 @@ body {
 .form-checkbox-label {
     font-size: 25px;
     margin-top: -10px;
+}
+
+.form-summary-info {
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+    .form-summary-info p {
+        margin: 0;
+        padding-left: 50px;
+    }
+
+h4 {
+    padding-left: 50px;
 }
