styles.css edited for tables for admin

--- a/PhotoBooth.WEB/wwwroot/styles.css
+++ b/PhotoBooth.WEB/wwwroot/styles.css
@@ -64,3 +64,41 @@ body {
 h4 {
     padding-left: 50px;
 }
+
+.table-column {
+    white-space: nowrap;
+    padding: 5px 10px;
+}
+
+.table-column-short {
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 200px;
+    padding: 5px 0px;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
